--- a/index.html
+++ b/index.html
@@ -5,6 +5,123 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fantastic photo</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
   </head>
-  <body></body>
+  <body>
+    <!--Head of the page-->
+    <div class="container text-center text-light">
+      <h1 style="color: #0c4160">Fantastic Photos</h1>
+    </div>
+    <!--Carousel-->
+    <div class="container">
+      <div
+        id="carouselExampleCaptions"
+        class="carousel slide"
+        data-ride="carousel"
+      >
+        <div class="carousel-inner"></div>
+        <a
+          class="carousel-control-prev"
+          href="#carouselExampleCaptions"
+          role="button"
+          data-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a
+          class="carousel-control-next"
+          href="#carouselExampleCaptions"
+          role="button"
+          data-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
+    <!-- cards -->
+    <div class="container">
+      <div class="row"></div>
+    </div>
+
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script>
+      $(document).ready(function () {
+        const settings = {
+          url: 'https://api.unsplash.com/topics/',
+          method: 'GET',
+          headers: {
+            Authorization:
+              'Client-ID mYj9awBmDjuLzvC_Xa--o75rGZdsvi1EIWIRB3mxHxo',
+          },
+        };
+        $.ajax(settings).done(function (response) {
+          console.log('Success', response);
+          response.forEach((element) => {
+            if (element == response[0]) {
+              $('.carousel-inner').append(`
+                  <div class="carousel-item active">
+                    <img src="${element.cover_photo.urls.raw}" 
+                    class="d-block w-100" alt="${element.cover_photo.alt_description}">
+                    <div class="carousel-caption d-none d-md-block">
+                      <p>${element.cover_photo.user.name}</p>
+                    </div>
+                  </div>`);
+            } else {
+              $('.carousel-inner').append(`
+                  <div class="carousel-item">
+                    <img src="${element.cover_photo.urls.raw}" 
+                      class="d-block w-100" alt="${element.cover_photo.alt_description}" 
+                    >
+                    <div class="carousel-caption d-none d-md-block">
+                      <p>${element.cover_photo.user.name}</p>
+                    </div>
+                  </div>`);
+            }
+          });
+          // cards
+          response.forEach((element) => {
+            console.log('owner', element.owners[0]);
+            $('.row')
+              .append(`<div class="col-12 col-sm-6 col-md-5 col-lg-4 col-xl-3 mt-3">
+            <div class="card">
+            <img
+              src=${element.cover_photo.urls.raw}
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              
+              
+              <a href="file:///Users/charishma/codex_practice/webproject2/level2/details.html?id=${element.id}" class="btn btn-light">
+                <h5 class="card-title">${element.title}</h5></a>
+            </div>
+          </div>
+        </div>`);
+          });
+        });
+      });
+    </script>
+  </body>
 </html>
