--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
     <!--Head of the page-->
     <div class="container text-center text-light">
-      <h1 style="color: #0c4160">Fantastic Photos</h1>
+      <h1 style="color: #0c4160">Fantastic-Photos</h1>
     </div>
     <!--Carousel-->
     <div class="container">
