file path changed in html file

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <div class="card-body">
               
               
-              <a href="file:///Users/charishma/codex_practice/webproject2/level2/details.html?id=${element.id}" class="btn btn-light">
+              <a href="details.html?id=${element.id}" class="btn btn-light">
                 <h5 class="card-title">${element.title}</h5></a>
             </div>
           </div>
