--- a/details.html
+++ b/details.html
@@ -10,6 +10,7 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
     <div class="container">
@@ -31,7 +32,7 @@
       <h1 id="page-head"></h1>
     </div>
     <div class="container">
-      <p id="description" class="" style="background-color: antiquewhite"></p>
+      <p id="description" class=""></p>
     </div>
     <div class="container">
       <div id="images" class="row"></div>
